--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
